# horizon-ai-news-radar

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily-pipeline.yml
data/reports/: 2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  (+14 more)
src/: config.py  main.py  scheduler.py
src/cleaners/: dedup.py  formatter.py
src/daily/: report.py
src/fetchers/: base.py  rss.py  sources.py  web.py
src/llm/: classifier.py  summarizer.py
src/pushers/: base.py  wechat.py
src/storage/: models.py
