[project]
name = "horizon-ai-news-radar"
version = "0.1.0"
description = "🪐 AI 行业新闻雷达 — 定时抓取→LLM摘要→微信推送→日报生成"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.11",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=2.2.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "readability-lxml>=0.8.4.1",
    "sqlalchemy>=2.0.50",
]
